--- a/src/views/mypage-info/mypage-info.html
+++ b/src/views/mypage-info/mypage-info.html
@@ -1,48 +1,33 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title></title>
-    <script
-      defer
-      src="https://kit.fontawesome.com/9daa42bcef.js"
-      crossorigin="anonymous"
-    ></script>
+    <script defer src="https://kit.fontawesome.com/9daa42bcef.js" crossorigin="anonymous"></script>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-      crossorigin="anonymous"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
     <link rel="stylesheet" href="/public/css/public.css" />
     <link rel="stylesheet" href="mypage_info.css" />
     <script src="mypage_info.js" type="module" defer></script>
-  </head>
+</head>
 
-  <body>
+<body>
     <div class="pageWraper">
-      <nav
-        class="navbar navbar-expand-xl bg-light d-flex justify-content-evenly sticky-top"
-        id="nav"
-      ></nav>
-      <div class="container text-center">
-        <div class="row">
-          <div class="col-3"></div>
-          <div class="col-6" id="mainContainer">
-            <div class="container text-center">
-              <form class="box register-user-form-box">
-                <div class="row">
-                  <h1>내 정보 확인</h1>
-                  <div class="col">
-                    <div class="mb-3">
-                      <label
-                        for="exampleFormControlInput1"
-                        name="fullName"
-                        class="form-label label"
-                        >이름</label
+        <nav class="navbar navbar-expand-xl bg-light d-flex justify-content-evenly sticky-top" id="nav"></nav>
+        <div class="container text-center">
+            <div class="row">
+                <div class="col-3"></div>
+                <div class="col-6" id="mainContainer">
+                    <div class="container text-center">
+                        <form class="box register-user-form-box">
+                            <div class="row">
+                                <h1>내 정보 확인</h1>
+                                <div class="col">
+                                    <div class="mb-3">
+                                        <label for="exampleFormControlInput1" name="fullName" class="form-label label">이름</label
                       >
                       <input
                         type="text"
@@ -59,7 +44,7 @@
                   <div class="col">
                     <div class="mb-3">
                       <label
-                        for="exampleFormControlInput1"
+                        for="emailInput"
                         class="form-label label"
                         name="email"
                         >이메일</label
@@ -80,10 +65,10 @@
                   <div class="col">
                     <div class="mb-3">
                       <label
-                        for="exampleFormControlInput1"
+                        for=""
                         class="form-label label"
                         name="phoneNumber"
-                        >전화번호</label
+                        >주소</label
                       >
                       <input
                         type="tel"
@@ -101,6 +86,12 @@
                 <div class="row">
                   <div class="col">
                     <div class="col-sm">
+                      <button
+                      class="label btn btn-primary"
+                      for="adressInput"
+                      id="searchAddress"
+                      >주소</button
+                    >
                       <input
                         type="tel"
                         class="form-control able-when-edit"
@@ -152,7 +143,7 @@
                   <div class="col">
                     <div class="mb-3">
                       <label
-                        for="inputPassword4"
+                        for="passwordInput"
                         class="form-label label"
                         name="password"
                         >비밀번호</label
@@ -173,7 +164,7 @@
                   <div class="col">
                     <div class="mb-3">
                       <label
-                        for="inputPassword4"
+                        for="passwordConfirmInput"
                         class="form-label label"
                         name="passwordConfirm"
                         >비밀번호 확인</label
